# 26P11

./: README.md
docker/: .env  .env.example  Dockerfile  Dockerfile.dockerfile  RUN.md  compose.yml  entrypoint.sh
manipulation_pkg/: CMakeLists.txt  package.xml  setup.py
manipulation_pkg/launch/: grasp_object.launch
manipulation_pkg/scripts/: grasp_object.py
manipulation_pkg/src/manipulation_pkg/: __init__p.y
navigation_pkg/: CMakeLists.txt  move_base.launch  package.xml  setup.py
navigation_pkg/config/: amcl.yaml  base_local_planner.yaml  costmap_common.yaml  local_costmap.yaml  nav_contract.yaml  nav_contract_real.yaml  nav_contract_sim.yaml
navigation_pkg/launch/: localization.launch  mapping.launch  move_base.launch
navigation_pkg/scripts/: go_to_pose.py  listen_target_point.py  publish_dummy_target_point.py  publish_target_from_json.py  wp1_fake_target_publisher.py
navigation_pkg/src/navigation_pkg/: go_to_pose.py
scene_graph_bridge_pkg/: CMakeLists.txt  package.xml
scene_graph_bridge_pkg/scripts/: direct_goal_sender.py  nlp_commander_terminal_input.py
submissions/memo1/: memo_1.tex
