<?xml version="1.0"?>
<package format="2">
  <name>manipulation_pkg</name>
  <version>0.0.0</version>
  <description>Manipulation package for Stretch grasp behavior.</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>hello_helpers</depend>
  <depend>stretch_funmap</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export/>
</package>