<?xml version="1.0"?>
<package format="2">
  <name>navigation_pkg</name>
  <version>0.0.1</version>
  <description>Navigation stack launch and configs for Stretch2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies (nodes we launch) -->
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend>
</package>
