<?xml version="1.0"?>
<package format="2">
  <name>scene_graph_bridge_pkg</name>
  <version>0.0.0</version>
  <description>Bridge from scene graph JSON output to navigation target point.</description>

  <maintainer email="janita.sallanko@aalto.fi">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-requests</exec_depend>

  <export/>
</package>